--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     <div class="circle-divider"></div>
                     <p>Kyiv, Mechnikova str, 14/1</p>
                     <div class="circle-divider"></div>
-                    <a href="tel:+0800 211 927" class="header-phone-link">0800 211 927</a>
+                    <a href="tel:+0800211927" class="header-phone-link">0800 211 927</a>
                     <div class="circle-divider"></div>
                     <a href="#" class="header-facebook-link">
                         <svg class="header-facebook-icon" fill="none" viewBox="0 0 24 24">
@@ -40,11 +40,11 @@
                     </a>
                 </div>
                 <nav class="nav-menu">
-                    <a href="">about us</a>
-                    <a href="/src/pages/services.html">services</a>
-                    <a href="">team</a>
+                    <a href="#">about us</a>
+                    <a href="#">services</a>
+                    <a href="#">team</a>
                     <a href="/src/pages/publications.html">publications</a>
-                    <a href="">contact</a>
+                    <a href="#">contact</a>
                 </nav>
             </div>
         </div>
@@ -61,7 +61,7 @@
                     <div class="circle-divider"></div>
                     <p class="header-adress">Kyiv, Mechnikova str, 14/1</p>
                     <div class="circle-divider"></div>
-                    <a href="tel:+0800 211 927" class="header-phone-link">0800 211 927</a>
+                    <a href="tel:+0800211927" class="header-phone-link">0800 211 927</a>
                     <div class="circle-divider"></div>
                     <a href="#" class="header-facebook-link">
                         <svg class="header-facebook-icon" fill="none" viewBox="0 0 24 24">
@@ -91,11 +91,11 @@
                             <use href="./dist/images/sprite.svg#cross-button-icon"></use>
                         </svg>
                     </div>
-                    <a href="">about us</a>
-                    <a href="/src/pages/services.html">services</a>
-                    <a href="">team</a>
+                    <a href="#">about us</a>
+                    <a href="#">services</a>
+                    <a href="#">team</a>
                     <a href="/src/pages/publications.html">publications</a>
-                    <a href="">contact</a>
+                    <a href="#">contact</a>
                 </nav>
             </div>
     </div>
@@ -104,9 +104,6 @@
         <div class="hero-logo-wrapper">
             <div class="hero-logo-scroll-wrapper">
                 <h1>you legal solutions provider</h1>
-                <!-- <svg class="hero-icon" fill="none" viewBox="0 0 697 799">
-                    <use href="./dist/images/sprite.svg#hero-icon"></use>
-                </svg> -->
                 <div class="hero-icon"></div>
                 <button class="scroll">
                     <svg class="scroll-arrow-icon" fill="none" viewBox="0 0 42 42">
@@ -311,27 +308,27 @@
             </div>
             <div class="publications-card-wrapper">
                 <div class="publication-card">
-                    <img src="./dist/images/publications-imgs/first-publication-img.webp" alt="">
+                    <img src="./dist/images/publications-imgs/first-publication-img.webp" alt="first-publication-img">
                     <div class="card-details-wrapper">
-                        <p class="publication-title">Equity associate</p>
+                        <a href="./src/pages/publication-entry-page.html" class="publication-title">Equity associate</a>
                         <p class="publication-date">April 22</p>
                         <div class="publication-horizontal-divider"></div>
                         <p class="publication-description">I'm a jun on projects. I am a co-owner of a law firm. How it happened. Before entering my parents told me that if I…</p>
                     </div>
                 </div>
                 <div class="publication-card">
-                    <img src="./dist/images/publications-imgs/second-publication-img.webp" alt="">
+                    <img src="./dist/images/publications-imgs/second-publication-img.webp" alt="second-publication-img">
                     <div class="card-details-wrapper">
-                        <p class="publication-title">Penalty for the Good Corporation: what will happen to Google and others for violating the GDPR</p>
+                        <a href="./src/pages/publication-entry-page.html" class="publication-title">Penalty for the Good Corporation: what will happen to Google and others for violating the GDPR</a>
                         <p class="publication-date">September 29</p>
                         <div class="publication-horizontal-divider"></div>
                         <p class="publication-description">And why the recovery of 50 million euros could be a fateful precedent According to Mind.ua January 21 National Commission for Data Protection.</p>
                     </div>
                 </div>
                 <div class="publication-card">
-                    <img src="./dist/images/publications-imgs/third-publication-img.webp" alt="">
+                    <img src="./dist/images/publications-imgs/third-publication-img.webp" alt="third-publication-img">
                     <div class="card-details-wrapper">
-                        <p class="publication-title">Millennial Testament</p>
+                        <a href="./src/pages/publication-entry-page.html" class="publication-title">Millennial Testament</a>
                         <p class="publication-date">August 19</p>
                         <div class="publication-horizontal-divider"></div>
                         <p class="publication-description">What and how modern vloggers, opinion leaders and crypto-millionaires will inherit A typical legacy of the Ukrainian generation X looks like this: an apartment in…</p>
@@ -351,7 +348,7 @@
                 <div class="map-address">
                     <p>Kyiv, Mechnikova str, 14/1</p>
                     <div class="circle-divider"></div>
-                    <a href="https://www.google.com/maps/search/?api=1&query=Kyiv, Mechnikova str, 14/1" target="_blank" class="on-map-link">ON MAP</a>
+                    <a href="https://www.google.com/maps/search/?api=1&query=Kyiv,Mechnikovastr,14/1" target="_blank" class="on-map-link">ON MAP</a>
                 </div>
                 <div class="copyright-wrapper">
                     <p class="copyright-text">© 2021 HLEGAL Law company, LLC</p>
@@ -364,7 +361,7 @@
                     </svg>
                 </a>
                 <div class="circle-divider"></div>
-                <a href="tel:+0800 211 927" class="footer-phone-link">0800 211 927</a>
+                <a href="tel:+0800211927" class="footer-phone-link">0800 211 927</a>
                 <div class="circle-divider"></div>
                 <a href="mailto:contact@forstudy.space" class="footer-email-link">contact@forstudy.space</a>
             </div>
